# OpenSSL-Client-Server-with-BIO

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  Main.cpp  OpenSSL_BIO_Client.cpp  OpenSSL_BIO_Client.h
Server/: CMakeLists.txt  Main.cpp  OpenSSL_BIO_Server.cpp  OpenSSL_BIO_Server.h
